--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "author": "Jesse Langford <jesse@passkit.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "start": "node ."
+    "clean": "rimraf dist/*",
+    "tsc": "tsc",
+    "run": "node .",
+    "build": "npm-run-all clean tsc",
+    "start": "npm-run-all build run",
+    "start:dev": "NODE_ENV=dev nodemon --watch src -e ts --exec yarn start",
+    "start:test": "NODE_ENV=test nodemon --watch src -e ts --exec yarn start"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1"
   }
 }
